--- a/pom.xml
+++ b/pom.xml
@@ -2,26 +2,31 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.applenick</groupId>
-	<artifactId>Fullbright</artifactId>
-	<version>1.1-RELEASE</version>
-	<name>Fullbright</name>
+	<artifactId>iBright</artifactId>
+	<version>2.0-SNAPSHOT</version>
+	<name>iBright</name>
 	<description>A Fullbright Bukkit Plugin</description>
 	<repositories>
 		<repository>
-			<id>Overcast-Repo</id>
-			<url>http://repo.oc.tc/content/groups/public/</url>
+			<id>applenick-repo</id>
+			<url>http://repo.applenick.com/nexus/content/groups/public/</url>
+		</repository>
+		<repository>
+			<id>spigot-repo</id>
+			<url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
 		</repository>
 	</repositories>
+
 	<dependencies>
 		<dependency>
-			<groupId>tc.oc</groupId>
-			<artifactId>sportbukkit</artifactId>
-			<version>1.7.10-R0.1-SNAPSHOT</version>
+			<groupId>org.spigotmc</groupId>
+			<artifactId>spigot-api</artifactId>
+			<version>1.8-R0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
-			<groupId>tc.oc</groupId>
-			<artifactId>sportbukkit-api</artifactId>
-			<version>1.7.10-R0.1-SNAPSHOT</version>
+			<groupId>org.bukkit</groupId>
+			<artifactId>bukkit</artifactId>
+			<version>1.8-R0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.sk89q</groupId>
