--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.applenick</groupId>
-	<artifactId>iBright</artifactId>
+	<artifactId>Fullbright</artifactId>
 	<version>2.0-SNAPSHOT</version>
 	<name>iBright</name>
 	<description>A Fullbright Bukkit Plugin</description>
@@ -10,10 +10,6 @@
 		<repository>
 			<id>applenick-repo</id>
 			<url>http://repo.applenick.com/nexus/content/groups/public/</url>
-		</repository>
-		<repository>
-			<id>spigot-repo</id>
-			<url>https://hub.spigotmc.org/nexus/content/groups/public/</url>
 		</repository>
 	</repositories>
 
