--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>com.applenick</groupId>
 	<artifactId>Fullbright</artifactId>
 	<version>2.0-SNAPSHOT</version>
-	<name>iBright</name>
+	<name>Fullbright</name>
 	<description>A Fullbright Bukkit Plugin</description>
 	<repositories>
 		<repository>
