--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.applenick</groupId>
 	<artifactId>Fullbright</artifactId>
-	<version>2.0-SNAPSHOT</version>
-	<name>iBright</name>
+	<version>2.1-SNAPSHOT</version>
+	<name>FullBright</name>
 	<description>A Fullbright Bukkit Plugin</description>
 	<repositories>
 		<repository>
@@ -17,12 +17,12 @@
 		<dependency>
 			<groupId>org.spigotmc</groupId>
 			<artifactId>spigot-api</artifactId>
-			<version>1.8-R0.1-SNAPSHOT</version>
+			<version>1.8.3-R0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.bukkit</groupId>
 			<artifactId>bukkit</artifactId>
-			<version>1.8-R0.1-SNAPSHOT</version>
+			<version>1.8.3-R0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.sk89q</groupId>
